// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseCommonConfig > dev.xxx 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/aaaa",
      "port": "<port>",
    },
    "hmr": false,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "appIcon": undefined,
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "charset": "ascii",
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "resolve": {},
  "security": {},
  "server": {
    "compress": false,
    "headers": {
      "X-Custom-Foo": "bar",
    },
    "historyApiFallback": true,
    "host": "xxx.xxx",
    "htmlFallback": false,
    "https": {
      "cert": "xxx",
      "key": "xxxx",
    },
    "middlewareMode": true,
    "port": 8081,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
    "transformImport": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > dev.xxx 2`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "appIcon": undefined,
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "charset": "ascii",
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": undefined,
  },
  "performance": {},
  "plugins": [],
  "resolve": {},
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
    "transformImport": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.cssModuleLocalIdentName 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "appIcon": undefined,
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "charset": "ascii",
    "cssModules": {
      "localIdentName": "[local]-[hash:base64:6]",
    },
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "resolve": {},
  "security": {},
  "server": {
    "htmlFallback": false,
    "middlewareMode": true,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
    "transformImport": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.disableCssModuleExtension 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "appIcon": undefined,
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "charset": "ascii",
    "cssModules": {
      "auto": [Function],
    },
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "polyfill": "entry",
    "sourceMap": {
      "css": true,
    },
  },
  "performance": {},
  "plugins": [],
  "resolve": {},
  "security": {},
  "server": {
    "htmlFallback": false,
    "middlewareMode": true,
    "port": 8080,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
    "transformImport": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.enableInlineScripts 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "appIcon": undefined,
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "charset": "ascii",
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "inlineScripts": true,
    "polyfill": "entry",
    "sourceMap": undefined,
  },
  "performance": {},
  "plugins": [],
  "resolve": {},
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
    "transformImport": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;

exports[`parseCommonConfig > output.enableInlineStyles 1`] = `
{
  "dev": {
    "client": {
      "overlay": false,
      "path": "/webpack-hmr",
      "port": "<port>",
    },
    "hmr": true,
    "liveReload": true,
    "progressBar": true,
    "writeToDisk": [Function],
  },
  "environments": {},
  "html": {
    "appIcon": undefined,
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "charset": "ascii",
    "dataUriLimit": 10000,
    "distPath": {
      "html": "html",
    },
    "inlineStyles": true,
    "polyfill": "entry",
    "sourceMap": undefined,
  },
  "performance": {},
  "plugins": [],
  "resolve": {},
  "security": {},
  "server": {
    "htmlFallback": false,
    "printUrls": false,
    "publicDir": false,
  },
  "source": {
    "alias": undefined,
    "decorators": {
      "version": "legacy",
    },
    "transformImport": undefined,
  },
  "tools": {
    "htmlPlugin": [Function],
    "lightningcssLoader": false,
  },
}
`;
